# eurorust-2025-talk

./: .editorconfig  Makefile  README.md
01-just-assembly/: Makefile  kernel.S  link.ld
02-rust-32-bit/: Cargo.toml  Makefile  link.ld  rust-toolchain.toml
02-rust-32-bit/src/: debugcon.rs  heap.rs  main.rs  start.S
02-rust-32-bit/src/pci/: io.rs  mod.rs
02-rust-32-bit/src/pci/discover/: address.rs  config_space.rs  device.rs  function.rs  mod.rs
